<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/network_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.todolistkotlin.presentation.components.CustomTextView
        android:id="@+id/txt_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opps"
        app:layout_constraintEnd_toEndOf="@id/img"
        app:layout_constraintStart_toStartOf="@id/img"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:textPriority="primary"
        app:textType="title1" />

    <com.example.todolistkotlin.presentation.components.CustomTextView
        android:id="@+id/txt_message_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5"
        android:text="@string/msg_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_error_title"
        app:textType="subtitle1" />

    <com.example.todolistkotlin.presentation.components.CustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_try_again"
        android:layout_marginTop="@dimen/spacing_25"
        android:text="@string/try_again"
        android:layout_marginHorizontal="@dimen/layout_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:buttonPriority="primary"
        app:layout_constraintTop_toBottomOf="@id/txt_message_error" />
</androidx.constraintlayout.widget.ConstraintLayout>