<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="categoryViewModelXml"
            type="com.example.todolistkotlin.presentation.viewmodel.CategoryViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/layout_margin"
            tools:context=".presentation.fragment.StatisticsFragment">

            <com.example.todolistkotlin.presentation.components.CustomHeader
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headerTitle="@string/statistics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:leftIcon="@drawable/ic_back_arrow" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_margin"
                android:layout_marginTop="@dimen/spacing_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_task"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:text="@string/tasks" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_category"
                    android:layout_width="wrap_content"
                    android:checkable="@{categoryViewModelXml.categoryViewState.fetchCompleted}"
                    android:layout_height="wrap_content"
                    android:text="@string/categories" />
            </com.google.android.material.chip.ChipGroup>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chip_group" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>